src/pages/LandingPage.css
/* --Hero-sektion-- */

.hero {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: var(--spacing-3xl);
    background-color: var(--color-background);
    padding: var(--spacing-3xl);
}

.hero-text {
    display: flex;
    flex-direction: column;
    max-width: 50%;
    align-self: center;
}

.featured-recipes {
    margin-bottom: var(--spacing-md);
}

.header-h1 {
    font-family: var(--font-heading);
    margin-bottom: var(--spacing-xl);
    max-width: 500px;
}

.header-icons {
    display: flex;
    flex-direction: row;
    gap: var(--spacing-md);
}

.category-icon,
.servings-icon {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--spacing-sm);
    margin-bottom: var(--spacing-xl);
    font-size: var(--text-small);

}

.rating {
    display: flex;
    align-items: center;
    gap: 8px;
    margin-bottom: 24px;
}

.view-recipe-btn {
    display: flex;
    align-items: center;
    border-style: none;
    background-color: var(--color-dark-accent);
    color: var(--color-background);
    padding: 1rem 2rem;
    align-self: flex-start;
    border-radius: var(--radius-xl);
    font-family: var(--font-body);
    cursor: pointer;
}

.view-recipe-btn span {
    display: flex;
    font-size: var(--text-body);
    margin-left: var(--spacing-sm);
}

.hero-img {
    width: 400px;
    height: 500px;
    object-fit: cover;
    border-radius: var(--radius-lg);
    box-shadow: var(--shadow-lg);
}

/* --Search-sektion-- */

.search-function {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: var(--color-card);
    border: 1px solid var(--color-border);
}

.searchbar {
    background-color: var(--color-card);
    width: 100%;
    max-width: 60%;
    display: flex;
    align-items: center;
    padding: var(--spacing-md);
    border-radius: var(--radius-sm);
    border: 1px solid var(--color-border);
    margin: var(--spacing-2xl);
}

.searchbar input {
    background-color: var(--color-card);
    border-style: none;
    width: 100%;
    font-family: var(--text-body);
    margin-left: var(--spacing-sm);
    outline: none;
}

.search-icon {
    display: flex;
    flex-direction: row;
    align-items: center;
    cursor: pointer;
}

/* --Recipecard-sektion-- */

.category-btn {
    background-color: var(--color-card);
    border-style: none;
    padding: var(--spacing-md) var(--spacing-lg);
    border-radius: var(--radius-xl);
    border: 1px solid var(--color-border);
    box-shadow: var(--shadow-sm);
    font-family: var(--font-body);
    color: var(--color-text);
    cursor: pointer;
}

.category-btns {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: var(--radius-xl);
    margin: var(--spacing-2xl) auto;
}

.category-btn.active {
    background-color: var(--color-dark-accent);
    color: var(--color-card);
}

.recipe-list-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    max-width: 1200px;
    margin: 0 auto;
    margin-bottom: var(--spacing-xl);
    margin-top: var(--spacing-3xl);
    padding: 0 var(--spacing-xl);
}


.recipe-cards {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: var(--spacing-lg);
    max-width: 1300px;
    margin: 0 auto;
    margin-bottom: var(--spacing-2xl);
}

.recipe-cards .recipe-card {
    width: 340;
    margin: 0;
}

.show-more-btn {
    display: flex;
    justify-self: center;
    padding: var(--spacing-md) var(--spacing-xl);
    border: none;
    border-radius: var(--radius-xl);
    background-color: var(--color-dark-accent);
    color: var(--color-background);
    cursor: pointer;
    margin-bottom: var(--spacing-2xl);
}

/* RESPONSIVE */
@media (max-width: 900px) {
    .recipe-cards .recipe-card {
        width: calc(50% - var(--spacing-lg));
    }
}

@media (max-width: 768px) {
    .hero {
        overflow: hidden;
        padding: var(--spacing-xl);
    }

    .hero-img {
        height: 350px;
        width: 100%;
        max-width: 100%;
    }

    .searchbar {
        margin: var(--spacing-xl);
        max-width: 80%;
    }

    .category-btns {
        flex-wrap: wrap;
        gap: var(--spacing-sm);
        margin: var(--spacing-lg) auto;
        padding: 0 var(--spacing-md);
        width: 100%;
        box-sizing: border-box;
    }

    .recipe-list-header {
        padding: 0 var(--spacing-lg);
    }
}

@media (max-width: 650px) {
    .recipe-cards {
        gap: var(--spacing-md);
    }
}

@media (max-width: 480px) {
    .hero {
        flex-direction: column;
        padding: var(--spacing-sm);
    }

    .hero-img {
        height: 400px;
        width: 100%;
        object-fit: cover;
        align-self: center;
        margin-bottom: var(--spacing-3xl);
    }

    .hero-text {
        align-items: flex-start;
        align-self: flex-start;
        max-width: 100%;
        margin-left: var(--spacing-md);
    }

    .featured-recipes {
        margin-top: var(--spacing-2xl);
    }

    .searchbar {
        max-width: 90%;
        margin: var(--spacing-2xl) var(--spacing-sm);
    }

    .category-btns {
        margin: var(--spacing-xl) auto;
        padding: 0 var(--spacing-md);
    }

    .recipe-cards .recipe-card {
        width: 100%;
    }
}

@media (max-width: 375px) {
    .recipe-list-header {
        padding: 0 var(--spacing-sm);
        max-width: 100%;
    }

    .recipe-cards {
        padding: var(--spacing-sm);
    }
}

@media (max-width: 320px) {

}

